# edge

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/edge_impulse/: CMakeLists.txt
components/edge_impulse/edge-impulse-sdk/classifier/: ei_data_normalization.h
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_931007_4_compiled.cpp  tflite_learn_931007_4_compiled.h
main/: CMakeLists.txt  command_responder.cc  command_responder.h  idf_component.yml  inference.cpp  inference.h  main.cpp  sampling.cpp  sampling.h  sensor.cpp  sensor.h  sleep.cpp  sleep.h  task_mgr.cpp  task_mgr.h  udp_client.cpp  udp_client.h  wifi_sta.cpp  wifi_sta.h
